<resources>
    <string name="app_name">QRCodeScanner</string>
    <string name="empty_list">Файлы отсутствуют</string>
    <string name="empty_file">Записи отсутствуют</string>
    <string name="file_list">Список файлов</string>
    <string name="location_list">Список локаций</string>
    <string name="location_text">Локация не указана</string>
    <string name="empty_location_list">Список пуст</string>
    <string name="add_button_description">Добавить запись</string>
    <string name="object_ph">Подразделение</string>
    <string name="unit_ph">Подразделение</string>
    <string name="corpus_ph">Корпус</string>
    <string name="cabinet_ph">Кабинет</string>
    <string name="inv_n">Инвентарный номер</string>
    <string name="ser_n">Серийный номер</string>
    <string name="date">Дата</string>
    <string name="_1234567890">1234567890</string>
</resources>